force-app/main/default/objects/Instalment_insurance_fee__c/Instalment_insurance_fee__c.object-meta.xml
<CustomObject>
    <description>Installment for Insurance Premium or Membership Fees.
To be paid by Supplier or Buyer.
Insurance premium : usually 2 installments per year (every 6 months)
Membership Fees: usually every 12 months.</description>
    <label>Installment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Instalment insurance fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>