force-app/main/default/objects/Instalment_insurance_fee__c/fields/Account_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Account_Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account of the supplier</description>
    <inlineHelpText>Account of the Supplier</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <valueField>Account.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Instalment_insurance_fee</relationshipName>
    <type>Lookup</type>
</CustomField>