force-app/main/default/objects/Instalment_insurance_fee__c/fields/Amount_Instalment__c.field-meta.xml
<CustomField>
    <fullName>Amount_Instalment__c</fullName>
    <description>Amount to be taken from annual membership or from the Financing when BCC insurance is involved</description>
    <inlineHelpText>Amount to be taken from annual membership or from the Financing when BCC insurance is involved. Must be paid by the supplier.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>