force-app/main/default/objects/Instalment_insurance_fee__c/fields/Date_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Date_Paiement__c</fullName>
    <description>Date when the installment is paid from the Invoice financing</description>
    <inlineHelpText>Date when the installment is paid from the Invoice financing</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>