force-app/main/default/objects/Instalment_insurance_fee__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date for the paiement of the instalment</description>
    <inlineHelpText>Due date for the paiement of the instalment</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>