force-app/main/default/objects/Instalment_insurance_fee__c/fields/Insurance_Police_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Police_Number__c</fullName>
    <description>Insurance Policy Number</description>
    <formula>Supplier_buyer_map_instalment__r.Insurance_Police_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insurance Policy Number from the Map</inlineHelpText>
    <label>Insurance Policy Number</label>
    <type>Text</type>
</CustomField>