force-app/main/default/objects/Instalment_insurance_fee__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <description>Insurer of the buyer</description>
    <formula>Supplier_buyer_map_instalment__r.Buyer_Insured_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insurer of the buyer</inlineHelpText>
    <label>Insurer</label>
    <type>Text</type>
</CustomField>