force-app/main/default/objects/Instalment_insurance_fee__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finance invoice deal used to pay the instalment</description>
    <inlineHelpText>Finance invoice deal used to pay the instalment</inlineHelpText>
    <label>Invoice Finance Deal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Supplier_buyer_map_instalment__c</field>
            <operation>equals</operation>
            <valueField>invoice_finance_deal__c.Supplier_Buyer_Map__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipName>Instalment_insurance_fee</relationshipName>
    <type>Lookup</type>
</CustomField>