force-app/main/default/objects/Instalment_insurance_fee__c/fields/Status_Instalment__c.field-meta.xml
<CustomField>
    <fullName>Status_Instalment__c</fullName>
    <description>Payment status of the installment</description>
    <inlineHelpText>Payment status of the installment</inlineHelpText>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>