force-app/main/default/objects/Instalment_insurance_fee__c/fields/Supplier_buyer_map_instalment__c.field-meta.xml
<CustomField>
    <fullName>Supplier_buyer_map_instalment__c</fullName>
    <description>Insurance is an object from the Map</description>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipName>Instalment_insurance_fee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>