force-app/main/default/objects/Instalment_insurance_fee__c/fields/To_be_paid_by__c.field-meta.xml
<CustomField>
    <fullName>To_be_paid_by__c</fullName>
    <description>Customer who should pay the Instalment ( most of time Supplier)</description>
    <formula>Supplier_buyer_map_instalment__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer who should pay the Instalment ( most of time Supplier)</inlineHelpText>
    <label>To be paid by</label>
    <type>Text</type>
</CustomField>