force-app/main/default/objects/Instalment_insurance_fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>